--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,18 @@
+.default-layout{
+  display: grid;
+  grid-template-rows: 80px auto 3rem;
+  grid-template-areas: "header" "main" "footer";
+}
 
-
+header{
+  grid-area: header;
+}
+footer{
+  grid-area: footer;
+  background: black;
+  padding: 1rem;
+}
+main{
+  grid-area: main;
+  min-height: 88vh;
+}
